--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "~1.9.1",
+    "string": "^3.3.3",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
