--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./index.js",
     "autoDoc": "node ./swagger/autoGenDoc.js",
-    "dev": "npx nodemon ./swagger/autoGenDoc.js"
+    "dev": "npx nodemon ./swagger/autoGenDoc.js",
+    "prebuild": "npm run autoDoc"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
