--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "dnc-boardtasks-back",
+  "name": "backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./index.js",
     "autoDoc": "node ./swagger/autoGenDoc.js",
-    "dev": "npx nodemon ./swagger/autoGenDoc.js",
-    "prebuild": "npm run autoDoc"
+    "dev": "npx nodemon ./swagger/autoGenDoc.js" 
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0",
+    "mongoose": "^8.12.1",
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "~1.9.1",
-    "string": "^3.3.3",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1",
-    "validator": "^13.12.0"
+    "swagger-ui-express": "^5.0.1"
   }
 }
