--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
-"scripts": {
-  "start": "node ./index.js",
-  "autoDoc": "node ./swagger/autoGenDoc.js",
-  "dev": "npx nodemon ./index.js",
-  "prebuild": "node ./swagger/autoGenDoc.js",
-  "build": "node ./swagger/autoGenDoc.js"
-},
+  "scripts": {
+    "start": "node ./index.js",
+    "autoDoc": "node ./swagger/autoGenDoc.js",
+    "dev": "npx nodemon ./swagger/autoGenDoc.js"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
