Criação do usuário no mongoose

--- a/EXEMPLO.env
+++ b/EXEMPLO.env
@@ -1,1 +1,3 @@
-NODE_ENV = "localhost"    
+NODE_ENV = "localhost"   
+SWAGGER_SENHA_DOC="" 
+MONGODB_URI = "mongodb+srv://<Usuário>:<Senha>.@cluster.3hoxx.mongodb.net/localhost?retryWrites=true&w=majority&appName=Cluster"
